# universal

./: .bazelrc  package.json  tsconfig.json
modules/builders/: BUILD.bazel
modules/builders/e2e/build_angular/hello-world-app/: angular.json
modules/builders/src/ssr-dev-server/: index.ts
modules/builders/test/: utils.ts
modules/builders/test/ssr-dev-server/: base_spec_large.spec.ts
modules/builders/utils/: utils.ts
