load("//tools:defaults.bzl", "jasmine_node_test", "npm_package", "ts_library", "ng_test_library")

filegroup(
    name = "builders_assets",
    srcs = glob([
        "**/schema.json",
    ] + [
        "package.json",
        "README.md",
        "builders.json"
    ]),
)

ts_library(
    name = "builders",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.spec.ts",
            "**/e2e/**",
        ],
    ),
    module_name = "@nguniversal/builders",
    deps = [
        "@npm//@angular-devkit/architect",
        "@npm//@angular-devkit/core",
        "@npm//rxjs",
        "@npm//tree-kill",
    ],
)

npm_package(
    name = "npm_package",
    srcs = [":builders_assets"],
    deps = [":builders"],
)

jasmine_node_test(
    name = "unit_tests",
    srcs = [":builders_test_sources"],
    data = [
        ":builders_assets",
#        "//modules/common/schematics:npm_package",
    ],
)

ng_test_library(
    name = "builders_test_sources",
    srcs = glob(
        ["**/*.spec.ts"],
        exclude = ["**/files/**/*", "**/e2e/**"],
    ),
    tsconfig = ":tsconfig.json",
    deps = [
        ":builders",
#        "//modules/common/schematics",
        "@npm//@angular-devkit/architect",
        "@npm//@angular-devkit/core",
        "@npm//rxjs",
        "@npm//tree-kill",
    ],
)
